# agolliotapi

./: .gitignore  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.cursor/rules/: django-ninja.mdc
apps/humid_air/: api.py  apps.py  forms.py  urls.py  views.py
apps/humid_air/templates/pages/properties_tdr_hr/: index.html
apps/humid_air/templates/pages/properties_tdr_hr/partials/: input_card.html  results_card.html  results_table.html
apps/humid_air/templatetags/: __init__.py  humid_air_tags.py
apps/project/: admin.py  api.py  forms.py  models.py  tables.py  urls.py  views.py
apps/project/migrations/: 0001_initial.py
apps/project/templates/pages/projects_list/: delete.html  index.html  update.html
apps/sec_fluid/: admin.py  api.py  apps.py  forms.py  models.py  urls.py  views.py
apps/sec_fluid/migrations/: 0001_initial.py  0002_initial_fluids.py  0003_alter_incompressiblemixturefluid_options.py
apps/sec_fluid/templates/pages/properties_temp_conc/: index.html
apps/sec_fluid/templatetags/: sec_fluids_tags.py
core/: api.py  asgi.py  tables.py  urls.py  views.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
core/staticfiles/CACHE/css/: output.27f987bba032.css  output.ee02dd44ed26.css
core/staticfiles/src/: index.js  input.css  output.css
core/templates/: home.html
core/templates/layouts/_default/: baseof.html  dashboard.html
core/templates/layouts/partials/: card.html  footer-dashboard.html  navbar-dashboard.html  sidebar.html  table.html  table2.html
scripts/: deploy.sh  lint.sh  migration.sh  setup.sh
(+6 files in other folders)
